--- a/header.css
+++ b/header.css
@@ -1,5 +1,5 @@
 #header {
-    max-width: 110%;
+    max-width: 100%;
     width: 100%;
     background-color: #0F0E11;
     font-family: 'Courier New', Courier, monospace;
